--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ main .background .container img{
 }
 
 /*-----------------PAGE USUARIO-----------------*/
-
+/* 
 .usuarioFondo{
     text-align: center;
     background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),url(../img/2081189.jpg);
@@ -196,7 +196,7 @@ main .background .container img{
     background-position: center;
     width: 100%;
     height: 85vh;
-}
+} */
 
 
 .usuarioFondo{
