--- a/css/style.css
+++ b/css/style.css
@@ -2,50 +2,63 @@
 
 /*--------------------RESET--------------------*/
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
+@media screen and (max-width:900px) {
+
+    /* HERO */
+    .hero p {
+        font-size: 2rem;
+    }
+
+    .hero h2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width:1200px){
+
+    /* BLOG */
+    .blogFondo .contenedor {
+        flex-direction: column;
+    }
+
+    .blogFondo .contenedor h2{
+        font-size: 1.5rem;
+    }
+
+    .blogFondo .contenedor .contenedorTexto{
+        font-size: 1rem;
+    }
+
+    .blogFondo .contenedor .contenedorLista{
+        font-size: 0.8rem;
+        padding: 1.5rem;
+    }
+} 
+
 
 /*--------------------HEADER--------------------*/
 
 
-header nav{
+header nav {
     width: 100%;
     height: 150px;
 }
 
-header nav form input{
-    border: 2px solid rgba(100, 100, 100, 0.632);
-    border-radius: 5px;
-    padding: 10px;
-}
-
-header nav form input:hover{
-    border: 2px solid rgb(100, 100, 100);    
-}
-
-header nav form button{
-    border: 2px solid rgba(100, 100, 100, 0.632);
-    border-radius: 5px;
-    padding: 10px;
-    margin-left: 15px;
-}
-
-header nav form button:hover{
-    border: 2px solid rgb(100, 100, 100);
-}
 
 /*--------------------MAIN--------------------*/
 
 
 
-.hero div{
+.hero div {
     text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),  url(../img/istockphoto-1250920176-1024x1024.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), url(../img/istockphoto-1250920176-1024x1024.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -60,59 +73,58 @@ header nav form button:hover{
     color: white;
 }
 
-.hero h2{
+.hero h2 {
     margin-top: 1rem;
     padding: 0 1rem 0 1rem;
-    font-size: 1,5rem;
-    /* background-color: rgba(0, 0, 0, 0.475); */
+    font-size: 1, 5rem;
+
     border-radius: 5px;
     font-weight: 50;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.416);
 }
 
-.hero p{
-        background-color: rgba(0, 0, 0, 0.662);
-        font-size: 3rem;
-        width: 100%;
+.hero p {
+    background-color: rgba(0, 0, 0, 0.662);
+    font-size: 3rem;
+    width: 100%;
 }
 
 /*Cards*/
 
-.background{
-    background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),url(../img/2081189.jpg) ;
+.background {
+    background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), url(../img/2081189.jpg);
     background-size: cover;
     width: 100%;
 }
 
 
-.background .container{
+.background .container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     padding: 15px 0 15px 0;
-;
 }
 
-.card{
+.card {
     margin: 50px 0px 50px 0px;
     border-radius: 20px 20px 15px 15px;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.416);
     height: 650px;
+    transition: all 1s ease;
 }
 
-main .background .container img{
+main .background .container img {
     width: 400px;
     height: 500px;
     object-fit: cover;
     object-position: 20%;
 }
 
-.card h2{
+.card h2 {
     text-align: center;
 }
 
-.card a{
+.card a {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     padding: 15px 20px;
@@ -124,10 +136,10 @@ main .background .container img{
 }
 
 
-.card:hover{
+.card:hover {
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.416);
     cursor: pointer;
     transform: scale(1.02);
-    transition: all 1s ease;
 }
 
 
@@ -136,9 +148,56 @@ main .background .container img{
 
 /* ! me maree un poco con las clases porque las pages las hice a ultimo asi que posiblemente esten mal ordenadas y clasificadas, voy a arreglarlo pero no tengo tiempo para corregirlo con la entrega */
 
-.contenedor{
+
+
+.blogFondo .contenedor{
+    color: white;
+
+    background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), url(../img/2081189.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+    align-items: center;
+
+    
+}
+
+.blogFondo .Titulo {
+    padding: 10px 15px 10px 15px;
+    margin: 2rem;
+    font-size: 2rem;
+    background-color: rgba(0, 0, 0, 0.662);
+    border-radius: 5px;
+}
+
+.blogFondo .contenedorTexto {
+    background-color: rgba(0, 0, 0, 0.662);
+    padding-bottom: 15px;
+    font-size: 1.3rem;
+    margin: 50px;
+    padding: 10px 15px 10px 15px;
+}
+
+.blogFondo .contenedorLista {
+    background-color: rgba(0, 0, 0, 0.662);
+    padding: 3rem;
+    margin: 50px;
+}
+
+.blogFondo .contenedorLista li {
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
+}
+
+/*-----------------PAGE USUARIO-----------------*/
+
+
+.usuarioFondo {
     text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),url(../img/2081189.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), url(../img/2081189.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -146,8 +205,8 @@ main .background .container img{
     height: 85vh;
 
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 
     /* Letra */
@@ -155,131 +214,85 @@ main .background .container img{
 }
 
 
-.blogFondo .Titulo{
-    padding: 10px 15px 10px 15px;
-    margin-bottom: 2rem;
-    font-size: 2rem;
-    font-weight: 50;
-    background-color: rgba(0, 0, 0, 0.662);
-    border-radius: 5px;
-}
+.usuarioFondo .usuario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 
-.blogFondo .contenedorContainer{
-    height: 80%;
-    width: 60%;
-}
-
-.blogFondo .contenedorTexto{
-    background-color: rgba(0, 0, 0, 0.662);
-    padding-bottom: 15px;
-    font-size: 1.3rem;
-}
-
-.blogFondo .contenedorLista{
-    background-color: rgba(0, 0, 0, 0.662);
-    padding-top: 3rem;
-}
-
-.blogFondo .contenedorLista li{
-    text-decoration: none;
-    padding: 10px;
-    display: inline-block;
-}
-
-/*-----------------PAGE USUARIO-----------------*/
-/* 
-.usuarioFondo{
-    text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),url(../img/2081189.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 85vh;
-} */
-
-
-.usuarioFondo{
-        text-align: center;
-        background: linear-gradient(rgba(0, 0, 0, 0.333),rgba(0, 0, 0, 0.333)),url(../img/2081189.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        height: 85vh;
-    
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    
-        /* Letra */
-        color: white;
-}
-
-
-.usuarioFondo .usuario{
-    width: 70%;
-    height: 50%;
+    margin: 0 2rem 0 4rem;
+    padding: 30px;
     background-color: rgba(0, 0, 0, 0.662)
-    
-
 }
 
-.usuarioFondo .usuario h2{
+.usuarioFondo .usuario h2 {
     padding: 30px 0 30px 0;
 }
 
-.usuarioFondo .usuarioTarget div{
+.usuarioFondo .usuarioTarget div {
     align-items: center;
-    padding-top: 10px;
+    padding: 15px 0 15px;
 }
 
-.usuarioFondo .usuarioTarget .usuarioTargetRespuesta{
-    padding-top: 15px;
+.usuarioFondo .usuarioTarget div{
+    display: flex;
+    flex-direction: column;
 }
 
+.usuarioFondo .usuarioTarget .usuarioTargetRespuesta {
+    padding: 20px;
+}
+
+.usuarioFondo .usuarioTarget .usuarioTargetRespuesta .usuarioTargetRespuestaBoton{
+    padding-top: 20px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 
 /*--------------------FOOTER--------------------*/
 /*! GRID */
 /*! Ya que se me complico implementar grid a todo el body elegi implementarlo en el footer, podria implementar grid para el header main y footer pero  tendria que empezar el proyecto de 0 porque me confundo bastante con los codigos ya creados */
 
-.footer{
+.footer {
     border: 1px solid #e1e1e1;
+    height: 10rem;
     padding-top: 5rem;
 }
 
-.footerMenu{
+
+
+.footerMenu {
     text-align: center;
 }
 
 
-.footerMenu h3{
+.footerMenu h3 {
     margin-bottom: 0.5rem;
 }
 
-.footerMenu a{
+.footerMenu a {
     display: block;
     text-decoration: none;
     color: rgb(107, 107, 107);
 }
 
-.footerMenu a:hover{
+.footerMenu a:hover {
     color: black;
 }
 
-.footerGridContenedor{
+.footerGridContenedor {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     padding: 0 5rem 0 5rem;
 }
 
-footer .copy{
+footer .copy {
     color: black;
     list-style: none;
     text-decoration: none;
     text-align: center;
     padding-top: 5rem;
 }
-
