mediaquery en scss

--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -1,34 +1,39 @@
 // ! NO SE PORQUE NO ME FUNCIONAN LAS MEDIA QUARY
 
 // media quary
-@media screen and (max-width:900px){
+@media screen and (max-width:900px) {
     // HERO
-    .hero{
-        p{
-            .hero p {
+    .hero {
+        div {
+            .heroFrase {
                 font-size: 2rem;
-        }
-        h2{
-            font-size: 1.5rem;
+            }
+
+            .heroTitulo {
+                font-size: 1.5rem;
+            }
         }
     }
 }
 
-    @media screen and (max-width:1200px){
-        // BLOG
-        .contenedor{
-            flex-direction: column;
-            .Titulo{
-                font-size: 1.5rem;
+@media screen and (max-width:1200px) {
+
+    // BLOG
+    .contenedor {
+        flex-direction: column;
+
+        .Titulo {
+            font-size: 1.5rem;
+        }
+
+        .contenedorContainer {
+            .contenedorTexto {
+                font-size: 1rem;
             }
-            .contenedorContainer{
-                .contenedorTexto{
-                    font-size: 1rem;
-                }
-                .contenedorLista{
-                    font-size: 0.8rem;
-                    padding: 1.5rem;
-                }
+
+            .contenedorLista {
+                font-size: 0.8rem;
+                padding: 1.5rem;
             }
         }
     }
