--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 header nav {
   width: 100%;
-  height: 150px; }
+  height: 160px; }
 
 main .hero {
   text-align: center;
@@ -23,17 +23,18 @@ main .hero {
   align-items: center;
   /* Letra */
   color: white; }
-  main .hero div p {
-    background-color: rgba(0, 0, 0, 0.662);
-    font-size: 3rem;
+  main .hero div {
     width: 100%; }
-  main .hero div h2 {
-    margin-top: 1rem;
-    padding: 0 1rem 0 1rem;
-    font-size: 1, 5rem;
-    border-radius: 5px;
-    font-weight: 50;
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.416); }
+    main .hero div p {
+      background-color: rgba(0, 0, 0, 0.662);
+      font-size: 3rem; }
+    main .hero div h2 {
+      margin-top: 1rem;
+      padding: 0 1rem 0 1rem;
+      font-size: 1, 5rem;
+      border-radius: 5px;
+      font-weight: 50;
+      text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.416); }
 
 main .background {
   background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), url(../img/2081189.jpg);
@@ -142,6 +143,7 @@ footer {
   padding-top: 5rem; }
   footer .footerGridContenedor {
     display: grid;
+    position: center;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     padding: 0 5rem 0 5rem; }
@@ -163,12 +165,12 @@ footer {
     padding-top: 5rem; }
 
 @media screen and (max-width: 900px) {
-  .hero p .hero p {
+  .hero div .heroFrase {
     font-size: 2rem; }
-  .hero p h2 {
+  .hero div .heroTitulo {
     font-size: 1.5rem; } }
 
-@media screen and (max-width: 900px) and (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
   .contenedor {
     flex-direction: column; }
     .contenedor .Titulo {
