--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -38,3 +38,16 @@
         }
     }
 }
+
+@media screen and (max-width:1200){
+        // ACERCADE
+        .acercade {
+            .section1{
+                .section2{
+                    display: flex;
+                    flex-direction: column;
+            }
+                }
+
+        }
+}
