--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -86,6 +86,38 @@ main {
 
 //! PAGES--------------
 
+// ACERCADE
+
+.acercade{
+    color: white;
+
+    background: linear-gradient(rgba(0, 0, 0, 0.703), rgba(0, 0, 0, 0.703)), url(../img/2081189.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    .section1{
+        display: flex;
+        align-items: center;
+        padding: 100px;
+        gap: 100px;
+        .section2{
+            .section2name{
+                font-family: 'roboto', sans-serif;
+                font-size: 40px;
+                font-weight: bold;
+            }
+            .sectuib2p{
+                width: 60%;
+            }
+        }
+        .section3{
+            width: 40%;
+        }
+    }
+}
+
+
+
 // BLOG
 
 .contenedor {
@@ -126,6 +158,36 @@ main {
                 padding: 10px;
                 display: inline-block;
             }
+        }
+    }
+}
+
+// ENVIOS
+
+.envios{
+    color: white;
+
+    background: linear-gradient(rgba(0, 0, 0, 0.703), rgba(0, 0, 0, 0.703)), url(../img/2081189.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    .section1{
+        display: flex;
+        align-items: center;
+        padding: 100px;
+        gap: 100px;
+        .section2{
+            .section2name{
+                font-family: 'roboto', sans-serif;
+                font-size: 40px;
+                font-weight: bold;
+            }
+            .sectuib2p{
+                width: 60%;
+            }
+        }
+        .section3{
+            width: 40%;
         }
     }
 }
